--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Lee Han Yong Andy</a></h1>
+					<h1 id="logo"><a href="#">Lee Han Yong</a></h1>
 					<p>How you do one thing<br />
 					is how you do everything </p>
 				</header>
@@ -55,7 +55,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 										<p>Knowledge is like finding the dots<br />
-										and connecting the dots</a>.</p>
+										and connecting the dots.</p>
 									</header>
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 								</div>
