--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<li><a href="https://www.facebook.com/andylee.hy" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/leehanyong/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/LeeHanYongAndy" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="andyleehy2502@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/leeandyhy/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 				</footer>
 			</section>
