--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image Capture"><img src="images/Capture.PNG" alt="" /></span>
 					<h1 id="logo"><a href="#">Lee Han Yong</a></h1>
 					<p>How you do one thing<br />
 					is how you do everything </p>
